# Project-OLEG

./: .dockerignore  .env.docker  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  DOCKER.md  Dockerfile  FEATURES_3_0.md  FINISH_SUMMARY.txt  GEMINI.md  IMPROVEMENTS.md  IMPROVEMENTS_CREATIVE.md  INSTALLATION.md  LAUNCH.md  Makefile  POETRY_DOCKER.md  PROJECT_STATUS.md  QUICKSTART.md  QWEN.md  README.md  SUMMARY.md  TESTING.md  USER_GUIDE.md  VERIFICATION.md  add_owner_column.sql  alembic.ini  check_project.py  dailies_example.txt  deploy-wipe.ps1  docker-compose.prod.yml  docker-compose.yml  fix_bot_config.sql  fix_datetime.py  fix_db.py  fix_persona_column.py  fix_topic_id.py  fix_user_profile.py  migrate_bot_config.py  (+12 more)
.github/workflows/: ci.yml
.kiro/specs/fortress-update/: design.md  requirements.md  tasks.md
.kiro/specs/oleg-behavior-improvements/: design.md  requirements.md  tasks.md
.kiro/specs/oleg-commands-fix/: design.md  requirements.md  tasks.md
.kiro/specs/shield-economy-v65/: design.md  requirements.md  tasks.md
app/: __init__.py  config.py  logger.py  main.py  utils.py  worker.py
app/data/: default_knowledge.json  personas.json
app/database/: models.py  session.py
app/handlers/: achievements.py  admin_commands.py  admin_dashboard.py  antiraid.py  auctions.py  blackjack.py  broadcast.py  challenges.py  chat_join.py  citadel.py  duos.py  game_hub.py  games.py  gif_patrol.py  guilds.py  health.py  help.py  inventory.py  mafia.py  marriages.py  mini_games.py  moderation.py  owner_panel.py  private_admin.py  qna.py  quests.py  quotes.py  random_responses.py  reactions.py  shop.py  statistics.py  stickers.py  summarizer.py  team_wars.py  tips.py  topic_listener.py  tournaments.py  trading.py  vision.py  voice.py
app/jobs/: scheduler.py
app/middleware/: anti_click.py  blacklist_filter.py  defcon_filter.py  feature_toggle.py  logging.py  mode_filter.py  rate_limit.py  retry.py  sdoc_filter.py  spam_control.py  spam_filter.py  toxicity_analysis.py  toxicity_filter.py
app/services/: __init__.py  achievements.py  admin_panel.py  alive_ui.py  async_game_engine.py  auction_service.py  auto_reply.py  blackjack.py  bot_config.py  citadel.py  command_scope.py  content_downloader.py  dailies.py  duel_engine.py  duos.py  economy.py  elo.py  energy_limiter.py  event_service.py  fact_checker.py  fishing_stats.py  game_engine.py  gif_patrol.py  global_rate_limiter.py  golden_fund.py  http_clients.py  inventory.py  knowledge_base.py  leagues.py  link_preview.py  mafia_game.py  market_service.py  metrics.py  metrics_server.py  mini_games.py  mood.py  notifications.py  ollama_client.py  panic_mode.py  permission_checker.py  (+36 more)
migrations/: env.py
migrations/versions/: 007_games_v75.py  042d107b23a8_remove_quotes_and_stickers.py  08724a3d75f5_add_game_challenge_and_user_balance.py  20250127_remove_moderation_system.py  20251205_160525_add_active_topic_and_auto_reply.py  20251206_dailies_config_table.py  20251206_fortress_update_new_tables.py  20251206_shield_economy_v65.py  20251208_add_gif_patrol_enabled.py  20251208_grow_history.py  20251209_inventory_fishing_stats.py  20251211_add_topic_id_to_messages.py  20251217_quote_votes.py  20251218_pp_battle.py  20251220_pvp_accept_timeout.py  20251231_marriage_system.py  20260128_mafia_game_v950.py  5b6fe99ee596_add_game_balance_cooldowns.py  71b4acfaa9ed_add_trading_system_v9_5_trades_market_.py  add_sticker_pack_owner.py  beb16c1db81f_merge_heads.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: oleg-bot.json
monitoring/searxng/: limiter.toml  settings.yml
tests/: __init__.py  conftest.py
tests/integration/: test_database.py
tests/property/: __init__.py  conftest.py  test_admin_panel_props.py  test_alive_ui_props.py  test_anti_click_props.py  test_auto_reply_props.py  test_blackjack_props.py  test_broadcast_props.py  test_chat_history_props.py  test_citadel_props.py  test_coinflip_props.py  test_dailies_props.py  test_duel_props.py  test_elo_props.py  test_energy_limiter_props.py  test_fact_prefilter_props.py  test_fishing_props.py  test_game_engine_props.py  test_game_state_serialization_props.py  test_gif_patrol_props.py  test_global_rate_limit_props.py  test_golden_fund_props.py  test_help_props.py  test_json_mode_props.py  test_leagues_props.py  test_marriage_props.py  test_notifications_props.py  test_panic_mode_props.py  test_permission_checker_props.py  test_pp_cage_props.py  test_prompt_caching_props.py  test_prompt_injection_props.py  test_protection_profiles_props.py  test_qna_explicit_mention_props.py  test_quotes_props.py  test_rag_props.py  test_rag_reranking_props.py  test_rag_serialization_props.py  test_rag_temporal_props.py  test_reaction_cooldown_props.py  (+23 more)
tests/unit/: test_config.py  test_fact_checker.py  test_knowledge_base.py  test_metrics.py  test_ollama_fallback.py  test_prompt_structure.py  test_rate_limit.py  test_rate_limiter.py  test_redis_client.py  test_utils.py  test_web_search_trigger_v2.py
web_admin/: app.py  utils.py
web_admin/templates/: base.html  dashboard.html  login.html  logs.html  moderation.html  settings.html  stats.html  users.html
